<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/numberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="75dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_silver"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_silver"
            android:textSize="32sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_silver"
            android:textSize="32sp" />

        <Button
            android:id="@+id/divisionButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_orange"
            android:textColor="@color/white"
            android:text="@string/division"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/seven"
            android:textSize="32sp" />

        <Button
            android:id="@+id/eigthButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/eight"
            android:textSize="32sp" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/nine"
            android:textSize="32sp" />

        <Button
            android:id="@+id/multiplicationButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_orange"
            android:textColor="@color/white"
            android:text="@string/multiplication"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/four"
            android:textSize="32sp" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/five"
            android:textSize="32sp" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textColor="@color/white"
            android:text="@string/six"
            android:textSize="32sp" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_orange"
            android:text="@string/subtraction"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/additionButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_orange"
            android:textColor="@color/white"
            android:text="@string/addition"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp">

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="155dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_shape_carbon"
            android:gravity="start|center"
            android:paddingStart="24dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_carbon"
            android:textSize="32sp" />

        <Button
            android:id="@+id/resultButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/circle_shape_orange"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>